--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+        <title>Lit Codes, coming soon...</title>
+        <meta name="theme-color" content="#e1bee7">
+        <meta
+            name=description
+            content="We make your desired software with affordable prices, stay tuned!"
+        />
         <meta
             name="viewport"
             content="minimum-scale=1, initial-scale=1, width=device-width, shrink-to-fit=no"
         />
+        <link defer rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     </head>
     <body>
         <div id="app"></div>
