Fix site description

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <meta name="theme-color" content="#ffab04">
         <meta
             name=description
-            content="We are firestarters of the software world!"
+            content="We build the future of the enterprise level and open source software, let us create your dream product or join our community of excellent developers."
         />
         <meta
             name="viewport"
