--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,16 @@
                 box-shadow: rgba(0, 0, 0, 0.027) 0px 0.273549px 0.547098px -0.136775px, rgba(0, 0, 0, 0.02) 0px 0.547098px 0.683873px 0px, rgba(0, 0, 0, 0.016) 0px 0.136775px 1.36775px 0px;
             }
         </style>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147073925-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-147073925-1');
+        </script>
+        <!-- End of gtag -->
     </head>
     <body>
         <div id="app"></div>
